# Metabot

./: .gitignore  README.md
src/robstride_control/: CMakeLists.txt  package.xml
src/robstride_control/config/: robstride.yaml
src/robstride_control/include/robstride_control/: can_interface.hpp  motor_driver.hpp  protocol.hpp
src/robstride_control/launch/: robstride.launch.py
src/robstride_control/src/: can_interface.cpp  motor_driver.cpp  robstride_node.cpp
src/robstride_control_py/: package.xml  setup.cfg  setup.py
src/robstride_control_py/config/: robstride.yaml
src/robstride_control_py/launch/: robstride_py.launch.py
src/robstride_control_py/robstride_control_py/: __init__.py  robstride_py_node.py
src/robstride_control_py/test/: pytest.ini
