<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robstride_control</name>
  <version>0.1.0</version>
  <description>
    ROS 2 Jazzy driver for RobStride MIT-mode motors over SocketCAN.
    Adapted from Seeed-Projects/RobStride_Control.
  </description>
  <maintainer email="metabot@example.com">Metabot maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
