<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robstride_control_py</name>
  <version>0.1.0</version>
  <description>
    ROS 2 Jazzy Python driver for RobStride MIT-mode motors over SocketCAN.
    Wraps the upstream Seeed-Projects/RobStride_Control Python SDK.
  </description>
  <maintainer email="metabot@example.com">Metabot maintainers</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
